notebooks for experiments

--- a/notebooks/UnitTestsOnCollab.ipynb
+++ b/notebooks/UnitTestsOnCollab.ipynb
@@ -1,129 +1,81 @@
 {
-  "cells": [
-    {
-      "cell_type": "code",
-      "source": [
-        "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
-        "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
-        "QyNTUxOQAAACD8jZaTrZ9TVKDdO4JCLvyef6S9uqHcgXVwg7eP78oAGAAAAJhLRB4MS0Qe\n",
-        "DAAAAAtzc2gtZWQyNTUxOQAAACD8jZaTrZ9TVKDdO4JCLvyef6S9uqHcgXVwg7eP78oAGA\n",
-        "AAAEAs22L4hryptljXrWDjUBvKiw5vWgqQ35mA9XsN2mxjdPyNlpOtn1NUoN07gkIu/J5/\n",
-        "pL26odyBdXCDt4/vygAYAAAAFGZsYXZpb3ZkZkBiYWJ5YmVuZGVyAQ==\n",
-        "-----END OPENSSH PRIVATE KEY-----\n",
-        "\"\"\"\n",
-        "\n",
-        "# Create the directory if it doesn't exist.\n",
-        "! mkdir -p /root/.ssh\n",
-        "# Write the key\n",
-        "with open('/root/.ssh/id_ed25519', 'w') as f:\n",
-        "    f.write(GITHUB_PRIVATE_KEY)\n",
-        "# Add github.com to our known hosts\n",
-        "! ssh-keyscan -t ed25519 github.com >> ~/.ssh/known_hosts\n",
-        "# Restrict the key permissions, or else SSH will complain.\n",
-        "! chmod go-rwx /root/.ssh/id_ed25519\n",
-        "! git clone git@github.com:flaviovdf/copulae.git"
-      ],
-      "metadata": {
-        "id": "rPZILChq3xxE",
-        "outputId": "178a6038-c516-4ca5-f766-6aa58f53f124",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "# github.com:22 SSH-2.0-babeld-7f91b4d6\n",
-            "Cloning into 'copulae'...\n",
-            "Warning: Permanently added the ED25519 host key for IP address '140.82.121.3' to the list of known hosts.\n",
-            "remote: Enumerating objects: 52, done.\u001b[K\n",
-            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (41/41), done.\u001b[K\n",
-            "remote: Total 52 (delta 17), reused 29 (delta 8), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (52/52), 7.05 MiB | 5.24 MiB/s, done.\n",
-            "Resolving deltas: 100% (17/17), done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! (cd copulae ; git pull ; pytest; cd - )"
-      ],
-      "metadata": {
-        "id": "ppROy7Tz6Ceh",
-        "outputId": "6b4814f4-24dc-4e5d-8b62-067acc3eabfb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Permanently added the ED25519 host key for IP address '140.82.121.4' to the list of known hosts.\r\n",
-            "Already up to date.\n",
-            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-            "platform linux -- Python 3.7.13, pytest-3.6.4, py-1.11.0, pluggy-0.7.1\n",
-            "rootdir: /content/copulae, inifile:\n",
-            "plugins: typeguard-2.7.1\n",
-            "collected 3 items                                                              \u001b[0m\n",
-            "\n",
-            "copulae/tests/test_kde.py ..\u001b[36m                                             [ 66%]\u001b[0m\n",
-            "copulae/tests/test_utils.py F\u001b[36m                                            [100%]\u001b[0m\n",
-            "\n",
-            "=================================== FAILURES ===================================\n",
-            "\u001b[31m\u001b[1m__________________________________ test_ecdf ___________________________________\u001b[0m\n",
-            "\n",
-            "\u001b[1m    def test_ecdf():\u001b[0m\n",
-            "\u001b[1m        data = jnp.array([2, 1, 4, 0, 5, 6, 7, 1, 2, 4, 5, 2])\u001b[0m\n",
-            "\u001b[1m        ecdf_y = ecdf(data)\u001b[0m\n",
-            "\u001b[1m    \u001b[0m\n",
-            "\u001b[1m        ecdf_sm = ECDF(data)\u001b[0m\n",
-            "\u001b[1m>       assert_almost_equal(ecdf_sm(data), ecdf_y)\u001b[0m\n",
-            "\u001b[1m\u001b[31mE       AssertionError: \u001b[0m\n",
-            "\u001b[1m\u001b[31mE       Arrays are not almost equal to 7 decimals\u001b[0m\n",
-            "\u001b[1m\u001b[31mE       \u001b[0m\n",
-            "\u001b[1m\u001b[31mE       Mismatched elements: 12 / 12 (100%)\u001b[0m\n",
-            "\u001b[1m\u001b[31mE       Max absolute difference: 0.08333337\u001b[0m\n",
-            "\u001b[1m\u001b[31mE       Max relative difference: 0.50000001\u001b[0m\n",
-            "\u001b[1m\u001b[31mE        x: array([0.5      , 0.25     , 0.6666667, 0.0833333, 0.8333333, 0.9166667,\u001b[0m\n",
-            "\u001b[1m\u001b[31mE              1.       , 0.25     , 0.5      , 0.6666667, 0.8333333, 0.5      ])\u001b[0m\n",
-            "\u001b[1m\u001b[31mE        y: array([0.5833334, 0.3333333, 0.75     , 0.1666667, 0.9166667, 1.       ,\u001b[0m\n",
-            "\u001b[1m\u001b[31mE              1.0833334, 0.3333333, 0.5833334, 0.75     , 0.9166667, 0.5833334],\u001b[0m\n",
-            "\u001b[1m\u001b[31mE             dtype=float32)\u001b[0m\n",
-            "\n",
-            "\u001b[1m\u001b[31mcopulae/tests/test_utils.py\u001b[0m:20: AssertionError\n",
-            "\u001b[31m\u001b[1m====================== 1 failed, 2 passed in 4.03 seconds ======================\u001b[0m\n",
-            "/content\n"
-          ]
-        }
-      ]
-    }
-  ],
-  "metadata": {
-    "accelerator": "GPU",
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "colab": {
-      "background_execution": "on",
-      "collapsed_sections": [],
-      "name": "CopulaGenerator - Good.ipynb",
-      "provenance": []
+     "base_uri": "https://localhost:8080/"
     },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "gpuClass": "standard"
+    "id": "rPZILChq3xxE",
+    "outputId": "178a6038-c516-4ca5-f766-6aa58f53f124"
+   },
+   "outputs": [],
+   "source": [
+    "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
+    "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
+    "QyNTUxOQAAACD8jZaTrZ9TVKDdO4JCLvyef6S9uqHcgXVwg7eP78oAGAAAAJhLRB4MS0Qe\n",
+    "DAAAAAtzc2gtZWQyNTUxOQAAACD8jZaTrZ9TVKDdO4JCLvyef6S9uqHcgXVwg7eP78oAGA\n",
+    "AAAEAs22L4hryptljXrWDjUBvKiw5vWgqQ35mA9XsN2mxjdPyNlpOtn1NUoN07gkIu/J5/\n",
+    "pL26odyBdXCDt4/vygAYAAAAFGZsYXZpb3ZkZkBiYWJ5YmVuZGVyAQ==\n",
+    "-----END OPENSSH PRIVATE KEY-----\n",
+    "\"\"\"\n",
+    "\n",
+    "# Create the directory if it doesn't exist.\n",
+    "! mkdir -p /root/.ssh\n",
+    "# Write the key\n",
+    "with open('/root/.ssh/id_ed25519', 'w') as f:\n",
+    "    f.write(GITHUB_PRIVATE_KEY)\n",
+    "# Add github.com to our known hosts\n",
+    "! ssh-keyscan -t ed25519 github.com >> ~/.ssh/known_hosts\n",
+    "# Restrict the key permissions, or else SSH will complain.\n",
+    "! chmod go-rwx /root/.ssh/id_ed25519\n",
+    "! git clone git@github.com:flaviovdf/copulae.git"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ppROy7Tz6Ceh",
+    "outputId": "6b4814f4-24dc-4e5d-8b62-067acc3eabfb"
+   },
+   "outputs": [],
+   "source": [
+    "! (cd copulae ; git pull ; pytest; cd - )"
+   ]
+  }
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "background_execution": "on",
+   "collapsed_sections": [],
+   "name": "CopulaGenerator - Good.ipynb",
+   "provenance": []
+  },
+  "gpuClass": "standard",
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
