--- a/Example.ipynb
+++ b/Example.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGFo8uT99oWUVxMGhP/29S",
+      "machine_shape": "hm",
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyMn7zVMFu1TNYhy4leJOYkU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -53,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EvPbSXGwtYTN",
-        "outputId": "c1104033-fefa-48a8-f8a8-f8633c251394"
+        "outputId": "d34f9536-b85e-4afc-a65f-910946279ef2"
       },
       "execution_count": 1,
       "outputs": [
@@ -68,13 +71,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import userdata"
+      ],
+      "metadata": {
+        "id": "-uPxlDIQ3BI6"
+      },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n4KkTtkGtRG0",
-        "outputId": "c14f6301-262a-4a3e-8d1f-9bfc9623de0e"
+        "outputId": "538f415a-74ca-44ae-85ac-4bc22507f6b2"
       },
       "outputs": [
         {
@@ -82,19 +96,19 @@
           "name": "stdout",
           "text": [
             "Collecting git+ssh://****@github.com/flaviovdf/copulae.git\n",
-            "  Cloning ssh://****@github.com/flaviovdf/copulae.git to /tmp/pip-req-build-wk2rg91u\n",
-            "  Running command git clone --filter=blob:none --quiet 'ssh://****@github.com/flaviovdf/copulae.git' /tmp/pip-req-build-wk2rg91u\n",
-            "  Resolved ssh://****@github.com/flaviovdf/copulae.git to commit 13d1a965738a4873234272334fd3c5560a198ec8\n",
+            "  Cloning ssh://****@github.com/flaviovdf/copulae.git to /tmp/pip-req-build-ixbrezw_\n",
+            "  Running command git clone --filter=blob:none --quiet 'ssh://****@github.com/flaviovdf/copulae.git' /tmp/pip-req-build-ixbrezw_\n",
+            "  Resolved ssh://****@github.com/flaviovdf/copulae.git to commit 65c5ca46b33738528f40b1dc0d5ff82c2933a261\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting coverage (from copulae==0.1)\n",
             "  Downloading coverage-7.4.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (233 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m234.0/234.0 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m234.0/234.0 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: flax in /usr/local/lib/python3.10/dist-packages (from copulae==0.1) (0.8.0)\n",
             "Collecting flake8 (from copulae==0.1)\n",
             "  Downloading flake8-7.0.0-py2.py3-none-any.whl (57 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: jax in /usr/local/lib/python3.10/dist-packages (from copulae==0.1) (0.4.23)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from copulae==0.1) (1.23.5)\n",
             "Requirement already satisfied: optax in /usr/local/lib/python3.10/dist-packages (from copulae==0.1) (0.1.8)\n",
@@ -107,7 +121,7 @@
             "  Downloading pycodestyle-2.11.1-py2.py3-none-any.whl (31 kB)\n",
             "Collecting pyflakes<3.3.0,>=3.2.0 (from flake8->copulae==0.1)\n",
             "  Downloading pyflakes-3.2.0-py2.py3-none-any.whl (62 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: msgpack in /usr/local/lib/python3.10/dist-packages (from flax->copulae==0.1) (1.0.7)\n",
             "Requirement already satisfied: orbax-checkpoint in /usr/local/lib/python3.10/dist-packages (from flax->copulae==0.1) (0.4.4)\n",
             "Requirement already satisfied: tensorstore in /usr/local/lib/python3.10/dist-packages (from flax->copulae==0.1) (0.1.45)\n",
@@ -142,8 +156,8 @@
             "Requirement already satisfied: zipp in /usr/local/lib/python3.10/dist-packages (from etils[epath,epy]->orbax-checkpoint->flax->copulae==0.1) (3.17.0)\n",
             "Building wheels for collected packages: copulae\n",
             "  Building wheel for copulae (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for copulae: filename=copulae-0.1-py3-none-any.whl size=37251 sha256=ffdd85ca5621906a56eeac2e2446c27122c29b23c20083676a74457efa092cd5\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-_beznbq4/wheels/c4/a8/e8/250a08d940aa8b10fd5748c65191f09ee8f9026550ad53edfd\n",
+            "  Created wheel for copulae: filename=copulae-0.1-py3-none-any.whl size=37251 sha256=ac1852f6525ce0165ce0b1b9ada3f9ac5378cd044e34f8425ec5025dc5865682\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-45p2zwzw/wheels/c4/a8/e8/250a08d940aa8b10fd5748c65191f09ee8f9026550ad53edfd\n",
             "Successfully built copulae\n",
             "Installing collected packages: pyflakes, pycodestyle, mccabe, coverage, flake8, copulae\n",
             "Successfully installed copulae-0.1 coverage-7.4.1 flake8-7.0.0 mccabe-0.7.0 pycodestyle-2.11.1 pyflakes-3.2.0\n"
@@ -151,7 +165,7 @@
         }
       ],
       "source": [
-        "! pip install git+ssh://git@github.com/flaviovdf/copulae.git"
+        "! pip install {userdata.get('twocatsrepo')}"
       ]
     },
     {
@@ -176,7 +190,7 @@
       "metadata": {
         "id": "yuhkkk7ltVd0"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -187,7 +201,7 @@
       "metadata": {
         "id": "rIx-2ZVeuGps"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -201,7 +215,7 @@
       "metadata": {
         "id": "rCKCCR1ttRlx"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -221,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6pO-oVgnuW5x",
-        "outputId": "080358ff-5ddf-4aca-bd74-1d5229425b06"
+        "outputId": "a257b3c5-c600-4c1f-c307-1ed2cb71312f"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +247,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -248,7 +262,7 @@
       "metadata": {
         "id": "GsEIVH93uJ-O"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -276,7 +290,7 @@
       "metadata": {
         "id": "7tRHj7u-ucVp"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -302,7 +316,7 @@
       "metadata": {
         "id": "rxs9g2qCtfbX"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -326,15 +340,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gsNMJ8sQujAN",
-        "outputId": "474e6e01-c4d9-4bf8-f14a-2373edf86aba"
+        "outputId": "ff783edf-2e16-4d3f-9997-40e0e7d2edac"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/10 [00:00<?, ?it/s]"
+            "100%|██████████| 10/10 [02:02<00:00, 12.21s/it]\n"
           ]
         }
       ]
